spfa slf优化 加入中级用例 添加遗传计时器